--- a/src/models/pure_division/social_mapping.json
+++ b/src/models/pure_division/social_mapping.json
@@ -1,5 +1,6 @@
 {
     "agents_array" : "Agents",
+    "num_agents" : "n_agents",
     "utility_array" : "utils",
     "main_variables": ["assigned_to"],
     "share_function" : "share_for",
