--- a/src/models/table_assignment/social_mapping.json
+++ b/src/models/table_assignment/social_mapping.json
@@ -1,6 +1,7 @@
 {
     "agents_array" : "Agents",
     "utility_array" : "utilities",
+    "num_agents" : "n_agents",
     "main_variables": ["assigned"],
     "share_function" : "get_assigned_for",
     "share_utility" : "share_utility"
