added bus_tour and social_mapping to base_models_test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "./src/runners"
+        "./src/runners",
+        "./src/util"
     ],
     "python.testing.unittestArgs": [
         "-v",
