Some more progress on the experiment runner

--- a/src/models/bus_tour/social_mapping.json
+++ b/src/models/bus_tour/social_mapping.json
@@ -1,5 +1,6 @@
 {
     "agents_array" : "Passenger",
     "utility_array" : "score",
+    "num_agents" : "num_passengers",
     "main_variables": ["selected"]
 }
