small changes and new data for project_assignment and scheduling

--- a/src/models/project_assignment/social_mapping.json
+++ b/src/models/project_assignment/social_mapping.json
@@ -1,4 +1,6 @@
 {
     "agents_array" : "STUDENT",
-    "utility_array" : "util_per_agent"
+    "utility_array" : "util_per_agent",
+    "num_agents" : "n"
+
 }
